AUI-1249 Fix Tree alignment on Bootstrap 3

--- a/src/aui-tree/assets/aui-tree-view-core.css
+++ b/src/aui-tree/assets/aui-tree-view-core.css
@@ -1,17 +1,19 @@
 .tree-view {
-    overflow: auto
+    overflow: auto;
 }
 .tree-view ul {
-    list-style: none
+    list-style: none;
+    padding-left: 0;
 }
 .tree-view-content {
-    margin: 0
+    margin: 0;
 }
 .tree-container {
-    margin: 0 0 0 20px
+    margin: 0 0 0 20px;
 }
 .tree-node-content .tree-hitarea {
-    cursor: pointer
+    cursor: pointer;
+    margin-right: 3px;
 }
 .tree-node-content .tree-hitarea.tree-node-hidden-hitarea {
     background: none;
@@ -20,26 +22,27 @@
 .tree-label {
     cursor: pointer;
     line-height: 19px;
-    margin-left: 2px;
+    margin-left: 5px;
 }
 .tree-node .yui3-dd-draggable, .tree-node .yui3-dd-draggable .tree-label {
-    cursor: pointer
+    cursor: pointer;
 }
 .tree-node-leaf {
-    margin-left: 15px
+    margin-left: 15px;
 }
 .tree-node-selected .tree-label {
-    background: #eee
+    background: #eee;
 }
 /* TreeView file */
  .tree-file i {
-    cursor: move
+    cursor: move;
 }
 /* TreeNodeCheck */
  .tree-node-checkbox-container {
     -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=25)";
     filter: alpha(opacity=25);
     opacity: .25;
+    margin-left: 5px;
 }
 .tree-node-checked .tree-node-checkbox-container {
     -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
@@ -47,20 +50,20 @@
     opacity: 1;
 }
 .tree-node .tree-node-checkbox-container {
-    cursor: pointer
+    cursor: pointer;
 }
 /* TreeNodeTask */
  .tree-node-child-unchecked .tree-node-checkbox-container {
     -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
     filter: alpha(opacity=60);
-    opacity: .6
+    opacity: .6;
 }
 /* TreeViewDragDrop */
  .tree-drag-insert-above {
-    border-top: 1px dotted #555
+    border-top: 1px dotted #555;
 }
 .tree-drag-insert-below {
-    border-bottom: 1px dotted #555
+    border-bottom: 1px dotted #555;
 }
 .tree-drag-insert-append .tree-label {
     background: #eee;
@@ -78,7 +81,7 @@
     padding: 2px 10px 0 6px;
     -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
     filter: alpha(opacity=90);
-    opacity: .9
+    opacity: .9;
 }
 .tree-drag-helper-label {
     float: left;
@@ -86,5 +89,5 @@
     padding-left: 2px;
 }
 .tree-node-paginator {
-    margin-left: 18px
+    margin-left: 18px;
 }
